Fix turn rotation bug and add hint feature
Bug Fixes:
- Fix turn rotation bug caused by concurrent handleEndTurn calls
- Add concurrency guard to prevent duplicate end-turn processing
- Fix navigation race condition in LobbyScreen (removed duplicate navigate)

Features:
- Add hint system with configurable hints per turn (default: 2)
- Hint button shows remaining hints and displays hint text
- Hints auto-clear when word changes or turn ends
- Restructure word data: 3 categories (Who/Where/What) with hints
- Add CSV-to-JS conversion script (npm run convert-words)

Improvements:
- Remove 'words remaining' debug text from describer view
- Update Game schema with hintsPerTurn and hintsRemaining
- Add handleUseHint server function with emoji logging

Documentation:
- Add BUG_ANALYSIS_TURN_ROTATION.md
- Add HINT_FEATURE_SUMMARY.md
- Add WORD_SYSTEM_README.md
- Add ARCHITECTURE.md and CONVENTIONS.md
- Add .cursorrules for project guidelines

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "cd client && npm run dev",
     "build": "cd client && npm install && npm run build",
     "start": "node server/index.js",
-    "install-all": "npm install && cd client && npm install"
+    "install-all": "npm install && cd client && npm install",
+    "convert-words": "node server/data/convertWords.js"
   },
   "dependencies": {
     "express": "^4.18.2",
