Transform Word Guesser to The Hat Game
Major Changes:
- Implemented three-phase gameplay (Describe, One Word, Charades)
- Added player-submitted clue system (person names)
- Removed word/category system and hint system
- Added phase transition announcements
- Implemented skip-with-return logic
- Updated all UI components for Hat Game mechanics
- Renamed project and database to thehatgame_db
- Created comprehensive game rules documentation

Technical Updates:
- Updated Game schema with clue pool and phase tracking
- Refactored all handlers for clue-based gameplay
- Added clue submission UI in lobby
- Phase-specific instructions in game screen
- Real-time clue preloading for instant feedback

--- a/env.example
+++ b/env.example
@@ -3,5 +3,5 @@ NODE_ENV=development
 PORT=3002
 CLIENT_URL=http://localhost:5173
 
-# MongoDB Atlas connection
-MONGODB_URI=mongodb+srv://TickyTestUser:kGg2Wm9B4W5yvGU1@jdtickytest.uybysp2.mongodb.net/word-guesser?retryWrites=true&w=majority
+# MongoDB Atlas connection (replace with your actual connection string)
+MONGODB_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@YOUR_CLUSTER.mongodb.net/thehatgame_db?retryWrites=true&w=majority
