--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "word-guesser-client",
+  "name": "the-hat-game-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
