--- a/env.example
+++ b/env.example
@@ -4,4 +4,4 @@ PORT=3002
 CLIENT_URL=http://localhost:5173
 
 # MongoDB Atlas connection (replace with your actual connection string)
-MONGODB_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@YOUR_CLUSTER.mongodb.net/thehatgame_db?retryWrites=true&w=majority
+MONGODB_URI=
